# blog-django

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: django.yml
blog/: settings.py  urls.py
category/: models.py
comments/: admin.py  forms.py  models.py
comments/migrations/: 0003_alter_comment_comment_alter_comment_comment_name.py  0004_alter_comment_comment_user.py  0005_alter_comment_comment_publicated.py  0006_alter_comment_comment_name.py
posts/: admin.py  models.py  urls.py  views.py
posts/templates/posts/: index.html  post_category.html  post_detail.html  post_search.html
posts/templatetags/: custom_filters.py
templates/: base.html
templates/partial/: _footer.html  _head.html  _messages.html  _nav.html  _pagination.html
templates/static/: _base.scss  mycss.scss
templates/static/styles/: mycss.css  mycss.css.map
tests/: test_category.py  test_post.py
utils/: base_url.py
