[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["keven silva <keven.almeida.8179@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
django-seed = "^0.3.1"
Pillow = "^9.4.0"
django-summernote = "^0.8.20.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
