[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["keven silva <keven.almeida.8179@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
django-seed = "^0.3.1"
Pillow = "^9.4.0"
django-summernote = "^0.8.20.0"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"
django-crispy-forms = "^1.14.0"
django-axes = "^5.40.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.pytest.ini_options]
testpaths = ["tests/"]
DJANGO_SETTINGS_MODULE = "blog.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
